--- a/rpi5.yaml
+++ b/rpi5.yaml
@@ -29,6 +29,7 @@ variables:
   XT_DOMU_IMAGE: "core-image-thin-initramfs"
 
   DOMU_MACHINE: "generic-armv8-xt"
+  AOSP_IMAGE_DIR: "/home/az-xen/out/trout"
 
 common_data:
   common_yocto_sources: &COMMON_YOCTO_SOURCES
@@ -68,10 +69,12 @@ common_data:
     # Do not install kernel image to rootfs to decrease initrd size
     - ["RDEPENDS_${KERNEL_PACKAGE_NAME}-base", ""]
     # Remove features that we are not used
-    - [DISTRO_FEATURES:remove,
+    - [
+        DISTRO_FEATURES:remove,
         "x11 gtk gobject-introspection-data nfc irda zeroconf 3g sysvinit
-         acl alsa argp pcmcia usbgadget opengl ptest multiarch wayland
-         vulkan sysvinit"]
+        acl alsa argp pcmcia usbgadget opengl ptest multiarch wayland
+        vulkan sysvinit",
+      ]
 
 components:
   dom0:
@@ -87,7 +90,10 @@ components:
       target: "%{ZEPHYR_DOM0_TARGET}"
       work_dir: "%{ZEPHYR_DOM0_BUILD_DIR}"
       vars:
-        - "CONFIG_DOM_STORAGE_FATFS_LOGICAL_DRIVE_NAME=\"1\""
+        - 'CONFIG_DOM_STORAGE_FATFS_LOGICAL_DRIVE_NAME="1"'
+        - "CONFIG_DOM_CFG_AOSP_TROUT_DOMAIN=y"
+        - "CONFIG_DOM_STORAGE_FATFS_ENABLE=y"
+        - "CONFIG_DOM_STORAGE_MULTI_PARTITION=y"
       target_images:
         - "%{ZEPHYR_DOM0_BUILD_DIR}/zephyr/zephyr.bin"
       additional_deps:
@@ -137,6 +143,12 @@ components:
     builder:
       type: "null"
 
+  domu_aosp_trout:
+    default: true
+    build-dir: "%{AOSP_IMAGE_DIR}"
+    builder:
+      type: "null"
+
   domd:
     build-dir: "%{YOCTOS_WORK_DIR}"
     sources:
@@ -157,7 +169,7 @@ components:
         - [XT_DOM_NAME, "domd"]
         - [XT_DEVICE_TREES, "%{XT_XEN_DTBO_NAME}"]
         - [DOM0_OS, "%{DOM0_OS}"]
-        - [PREFERRED_VERSION_xen,"4.19.0+git"]
+        - [PREFERRED_VERSION_xen, "4.19.0+git"]
         - [PREFERRED_VERSION_xen-tools, "4.19.0+git"]
         - [PREFERRED_VERSION_u-boot, "2024.04"]
         - [XEN_DT_SCMI, "%{XEN_DT_SCMI_NAME}"]
@@ -169,7 +181,10 @@ components:
         - [UART_BOORLOADER, "1"]
         - [KERNEL_IMAGETYPE_UBOOT, "Image"]
         - [DISTRO_FEATURES:append, " xen"]
-        - [DOMD_BOOTARGS, "console=ttyAMA0 earlycon=xen earlyprintk=xen clk_ignore_unused root=%{DOMD_ROOTFS_DEV} rootfstype=ext4 rootwait quiet"]
+        - [
+            DOMD_BOOTARGS,
+            "console=ttyAMA0 earlycon=xen earlyprintk=xen clk_ignore_unused root=%{DOMD_ROOTFS_DEV} rootfstype=ext4 rootwait quiet",
+          ]
       build_target: "%{XT_DOMD_IMAGE}"
       layers:
         - *COMMON_YOCTO_LAYERS
@@ -233,7 +248,10 @@ components:
         - [XT_DOM_NAME, "domu"]
         # Bundle initramfs into kernel image
         - [INITRAMFS_IMAGE, "%{XT_DOMU_IMAGE}"]
-        - [INITRAMFS_IMAGE_NAME, "${INITRAMFS_IMAGE}${IMAGE_MACHINE_SUFFIX}.rootfs"]
+        - [
+            INITRAMFS_IMAGE_NAME,
+            "${INITRAMFS_IMAGE}${IMAGE_MACHINE_SUFFIX}.rootfs",
+          ]
         - [INITRAMFS_IMAGE_BUNDLE, "1"]
       build_target: "%{XT_DOMU_IMAGE}"
       layers:
@@ -256,24 +274,24 @@ images:
         items:
           "armstub8-2712.bin": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/armstub8-2712.bin"
           "bootcode.bin": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/bootcode.bin"
-          "config.txt":   "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/config.txt"
-          "cmdline.txt":  "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/cmdline.txt"
-          "fixup.dat":    "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup.dat"
+          "config.txt": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/config.txt"
+          "cmdline.txt": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/cmdline.txt"
+          "fixup.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup.dat"
           "fixup_cd.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup_cd.dat"
           "fixup_db.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup_db.dat"
-          "fixup_x.dat":  "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup_x.dat"
-          "fixup4.dat":   "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup4.dat"
+          "fixup_x.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup_x.dat"
+          "fixup4.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup4.dat"
           "fixup4cd.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup4cd.dat"
           "fixup4db.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup4db.dat"
-          "fixup4x.dat":  "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup4x.dat"
-          "start.elf":    "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start.elf"
+          "fixup4x.dat": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/fixup4x.dat"
+          "start.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start.elf"
           "start_cd.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start_cd.elf"
           "start_db.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start_db.elf"
-          "start_x.elf":  "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start_x.elf"
-          "start4.elf":   "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start4.elf"
+          "start_x.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start_x.elf"
+          "start4.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start4.elf"
           "start4db.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start4db.elf"
           "start4cd.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start4cd.elf"
-          "start4x.elf":  "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start4x.elf"
+          "start4x.elf": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/bootfiles/start4x.elf"
           "Image.gz": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/Image.gz"
           "xen": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/xen-%{MACHINE}"
           "xenpolicy": "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{MACHINE}/xenpolicy-%{MACHINE}"
@@ -302,6 +320,11 @@ images:
           "dom0/z_blinky.bin": "%{ZEPHYR_DOMU2_DIR}/%{ZEPHYR_DOMU2_BUILD_DIR}/zephyr/zephyr.bin"
           "dom0/helloworld_xen-arm64": "domu_unikraft/helloworld_xen-arm64"
           "dom0/linux-pv-image": "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/Image-initramfs-%{DOMU_MACHINE}.bin"
+          "dom0/trout/boot.img": "domu_aosp_trout/boot.img"
+          "dom0/trout/init_boot.img": "domu_aosp_trout/init_boot.img"
+          "dom0/trout/vendor_boot.img": "domu_aosp_trout/vendor_boot.img"
+          "dom0/trout/super.img": "domu_aosp_trout/super.img"
+          "dom0/trout/userdata.img": "domu_aosp_trout/userdata.img"
 
   rootfs:
     type: gpt
