yaml: Comment out aaos-guest-gicv2.dtb path in image configuration

--- a/rpi5.yaml
+++ b/rpi5.yaml
@@ -276,7 +276,7 @@ images:
           "dom0/aaos/super.img": "%{AAOS_IMAGE_DIR}/super.img"
           "dom0/aaos/userdata.img": "%{AAOS_IMAGE_DIR}/userdata.img"
           "dom0/aaos/Image": "%{AAOS_IMAGE_DIR}/Image"
-          "dom0/aaos/aaos-guest-gicv2.dtb": "zephyr/zephyr-dom0-xt/prebuilt/aaos-guest-gicv2.dtb"
+         # "dom0/aaos/aaos-guest-gicv2.dtb": "zephyr/zephyr-dom0-xt/prebuilt/aaos-guest-gicv2.dtb"
 
   rootfs:
     type: gpt
